# zenvestAi-backend

./: .env  main.py  pyproject.toml  test_request.json
auth/: jwt_bearer.py
config/: database.py  global_logger.py
constants/: dummy.py  mentor_message.py  persona_message.py
controllers/chat/: mentor.py  persona.py
data/: chats.db
functions/: fi_data.py  finance_analyzer.py  mentor_prompt_builder.py
routes/: mentorRoutes.py  personaRoutes.py
